--- a/index.html
+++ b/index.html
@@ -412,6 +412,234 @@
   {
     "grade": 6,
     "term": "上",
+    "round": 1,
+    "word": "垂れる",
+    "reading": "たれる",
+    "examples": [
+      "汗が額から垂れる。",
+      "洗濯物が竿から垂れた。",
+      "糸がだらりと垂れている。",
+      "雨どいから水が垂れ落ちた。",
+      "よだれが少し垂れてしまう。",
+      "ペンキが床に垂れないようにした。",
+      "枝が重みで垂れ下がっている。",
+      "カーテンのひもが垂れていた。",
+      "水が指先から垂れていく。",
+      "涙が頬を伝って垂れた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "専門",
+    "reading": "せんもん",
+    "examples": [
+      "専門の先生に相談した。",
+      "専門家の意見を聞いた。",
+      "専門分野が違うと難しい。",
+      "専門用語をかみくだいて説明する。",
+      "専門書を一冊読んでみた。",
+      "専門店で道具を買った。",
+      "専門の知識が必要な作業だ。",
+      "専門チームが調査を進める。",
+      "専門外のことは無理をしない。",
+      "将来は専門を生かしたい。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "意外",
+    "reading": "いがい",
+    "examples": [
+      "意外と早く終わった。",
+      "意外なところで会った。",
+      "結果は意外に接戦だった。",
+      "意外にも雨が降らなかった。",
+      "意外な一言に驚いた。",
+      "意外と相性がよかった。",
+      "意外な弱点が見つかった。",
+      "意外と道が混んでいた。",
+      "意外に落ち着いて話せた。",
+      "意外と簡単に解けた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "済む",
+    "reading": "すむ",
+    "examples": [
+      "宿題が早く済んだ。",
+      "準備はこれで済む。",
+      "支払いは電子で済ませた。",
+      "一言で済む話ではない。",
+      "手続きが無事に済んだ。",
+      "謝ればそれで済むと思うな。",
+      "昼までに用事を済ませる。",
+      "説明を聞いて納得が済んだ。",
+      "簡単に済ませず確認した。",
+      "修理が済んだら連絡する。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "簡単",
+    "reading": "かんたん",
+    "examples": [
+      "簡単な計算を間違えた。",
+      "簡単にあきらめない。",
+      "説明は簡単で分かりやすい。",
+      "簡単そうに見えて難しい。",
+      "手順を簡単にまとめた。",
+      "簡単な道具で作れる。",
+      "簡単に答えが出ない問題だ。",
+      "簡単に片づけて出発した。",
+      "思ったより簡単だった。",
+      "簡単なミスが多かった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "備え",
+    "reading": "そなえ",
+    "examples": [
+      "地震に備えて水を買った。",
+      "寒さに備えて上着を持つ。",
+      "非常時の備えを点検した。",
+      "雨に備えて傘を用意した。",
+      "備えがあると落ち着く。",
+      "備えが足りず困った。",
+      "予備の電池を備えた。",
+      "備えとして連絡先を書いた。",
+      "備えが万全か確認する。",
+      "備えをしても油断は禁物だ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "預かる",
+    "reading": "あずかる",
+    "examples": [
+      "先生から鍵を預かった。",
+      "荷物を受付で預かる。",
+      "一日だけ犬を預かった。",
+      "友だちの傘を預かった。",
+      "大切な書類を預かっている。",
+      "帽子を預かる場所がある。",
+      "預かったものは返す約束だ。",
+      "しばらく私が預かっておく。",
+      "預かるだけで責任が重い。",
+      "忘れないように預かった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "不思議",
+    "reading": "ふしぎ",
+    "examples": [
+      "不思議な音が聞こえた。",
+      "不思議と緊張が消えた。",
+      "不思議な形の雲が出た。",
+      "不思議そうに首をかしげた。",
+      "不思議な偶然が重なった。",
+      "不思議で仕方がない。",
+      "不思議な話を思い出した。",
+      "不思議なにおいがした。",
+      "不思議な力を信じない。",
+      "不思議と眠くならない。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "捨てる",
+    "reading": "すてる",
+    "examples": [
+      "ごみを捨てる日を確認した。",
+      "いらない紙は捨てた。",
+      "使い切ってから捨てる。",
+      "迷いを捨てて決めた。",
+      "約束を捨てるわけにはいかない。",
+      "古い服を捨てることにした。",
+      "感情を捨てて話し合う。",
+      "あきらめを捨てて挑戦した。",
+      "拾ったごみを捨てに行く。",
+      "袋をしっかり結んで捨てる。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "発揮",
+    "reading": "はっき",
+    "examples": [
+      "力を発揮して勝った。",
+      "集中力が発揮できた。",
+      "実力を発揮する場だ。",
+      "練習の成果を発揮した。",
+      "持ち味を発揮して助けた。",
+      "チームワークが発揮された。",
+      "個性を発揮できる仕事だ。",
+      "発揮できず悔しかった。",
+      "本番で発揮するため備える。",
+      "最後に底力を発揮した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "関心",
+    "reading": "かんしん",
+    "examples": [
+      "環境問題に関心がある。",
+      "関心を持って記事を読んだ。",
+      "関心のある分野を調べた。",
+      "関心が薄いと覚えにくい。",
+      "関心を引く見出しだった。",
+      "関心が高まってきた。",
+      "人の関心はすぐ移る。",
+      "関心を向ける先を変えた。",
+      "関心がないふりをした。",
+      "関心を共有すると話が進む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "拾う",
+    "reading": "ひろう",
+    "examples": [
+      "道で小銭を拾った。",
+      "落とした消しゴムを拾う。",
+      "ごみを拾って帰った。",
+      "拾った物は届け出た。",
+      "砂浜で貝がらを拾った。",
+      "拾う前に周りを見た。",
+      "拾ってくれて助かった。",
+      "拾うのが間に合わなかった。",
+      "拾った紙を袋に入れた。",
+      "拾うより落とさない工夫だ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
     "round": 2,
     "word": "模様",
     "reading": "もよう",
@@ -2687,6 +2915,805 @@
       "怒りが覚めた。",
       "魔法が覚める。",
       "夢中が覚めて我に返る。"
+    ]
+  }, {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "関心",
+    "reading": "かんしん",
+    "examples": [
+      "環境問題に関心がある。",
+      "関心を持って記事を読んだ。",
+      "関心のある分野を調べた。",
+      "関心が薄いと覚えにくい。",
+      "関心を引く見出しだった。",
+      "関心が高まってきた。",
+      "人の関心はすぐ移る。",
+      "関心を向ける先を変えた。",
+      "関心がないふりをした。",
+      "関心を共有すると話が進む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "拾う",
+    "reading": "ひろう",
+    "examples": [
+      "道で小銭を拾った。",
+      "落とした消しゴムを拾う。",
+      "ごみを拾って帰った。",
+      "拾った物は届け出た。",
+      "砂浜で貝がらを拾った。",
+      "拾う前に周りを見た。",
+      "拾ってくれて助かった。",
+      "拾うのが間に合わなかった。",
+      "拾った紙を袋に入れた。",
+      "拾うより落とさない工夫だ。"
+    ]
+  },
+
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "首脳",
+    "reading": "しゅのう",
+    "examples": [
+      "首脳会談が開かれた。",
+      "各国の首脳が集まった。",
+      "首脳の発言が注目された。",
+      "首脳級の会議に参加した。",
+      "首脳同士で意見を交わした。",
+      "首脳が共同声明を出した。",
+      "首脳が記者会見に臨んだ。",
+      "首脳が安全対策を話し合う。",
+      "首脳が訪問先で演説した。",
+      "首脳の決断が影響した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "棒",
+    "reading": "ぼう",
+    "examples": [
+      "長い棒で距離を測る。",
+      "棒を地面に立てた。",
+      "棒が折れないように運ぶ。",
+      "棒を使って箱を動かした。",
+      "棒の先に布を結んだ。",
+      "棒を支えにして歩いた。",
+      "棒を振って合図した。",
+      "棒で線を引いた。",
+      "棒を束ねてまとめた。",
+      "棒が転がっていった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "奮起",
+    "reading": "ふんき",
+    "examples": [
+      "悔しさで奮起した。",
+      "負けて奮起し、練習した。",
+      "仲間の言葉で奮起した。",
+      "奮起して最後まで走った。",
+      "ここで奮起しないといけない。",
+      "奮起して苦手を克服した。",
+      "奮起して目標を立て直した。",
+      "奮起して次の試合に備えた。",
+      "奮起して一気に追い上げた。",
+      "奮起して新しいことに挑んだ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "傷付く",
+    "reading": "きずつく",
+    "examples": [
+      "心ない言葉で傷付いた。",
+      "大事な本が傷付くのが嫌だ。",
+      "転んでひざが少し傷付いた。",
+      "相手を傷付けない言い方を選ぶ。",
+      "ガラスが傷付かないように包む。",
+      "友情が傷付くようなことはしない。",
+      "傷付いても立ち直る。",
+      "自分が傷付くのが怖かった。",
+      "傷付いた部分を手当てした。",
+      "傷付いた気持ちを話してみた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "役割",
+    "reading": "やくわり",
+    "examples": [
+      "自分の役割を確認した。",
+      "係の役割を分担した。",
+      "役割がはっきりすると動きやすい。",
+      "司会の役割を任された。",
+      "役割を入れ替えて練習した。",
+      "家庭での役割も大切だ。",
+      "役割を果たして信頼を得た。",
+      "役割が重く感じた。",
+      "役割に合わせて行動する。",
+      "役割分担で作業が早まった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "規模",
+    "reading": "きぼ",
+    "examples": [
+      "祭りの規模が大きい。",
+      "工事の規模を見直した。",
+      "地震の規模を知って驚いた。",
+      "大会の規模が年々広がる。",
+      "規模が小さくても工夫できる。",
+      "被害の規模が明らかになった。",
+      "計画の規模を少し縮めた。",
+      "規模の違いを比べた。",
+      "規模に合った設備が必要だ。",
+      "研究の規模を拡大した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "挙げる",
+    "reading": "あげる",
+    "examples": [
+      "手を挙げて答えた。",
+      "例を挙げて説明した。",
+      "成果を挙げるため努力する。",
+      "問題点をいくつか挙げた。",
+      "声を挙げて反対した。",
+      "候補を三つ挙げてみた。",
+      "具体例を挙げると分かりやすい。",
+      "実績を挙げて評価された。",
+      "名前を挙げて感謝した。",
+      "理由を挙げて断った。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "肥ゆる",
+    "reading": "こゆる",
+    "examples": [
+      "土が肥ゆると作物が育つ。",
+      "畑の土を肥やす工夫をした。",
+      "落ち葉で土が肥ゆる。",
+      "肥ゆる季節に種をまく。",
+      "土が肥ゆるまで待った。",
+      "川の近くは土が肥ゆると言われる。",
+      "堆肥で土がよく肥ゆる。",
+      "肥ゆる土は水もちがよい。",
+      "土が肥ゆると収穫が増える。",
+      "肥ゆる土地を探して畑を広げた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "祝う",
+    "reading": "いわう",
+    "examples": [
+      "合格をみんなで祝う。",
+      "誕生日を家族で祝った。",
+      "勝利を祝って拍手した。",
+      "卒業を祝う会を開く。",
+      "記念日を祝う料理を作った。",
+      "新しい門出を祝う言葉を送る。",
+      "友だちの成功を祝った。",
+      "結婚を祝うメッセージを書いた。",
+      "優勝を祝う旗が上がった。",
+      "祝う気持ちを形にした。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "率いる",
+    "reading": "ひきいる",
+    "examples": [
+      "キャプテンがチームを率いる。",
+      "先生が班を率いて歩いた。",
+      "監督が選手を率いて試合に臨む。",
+      "先頭に立って仲間を率いた。",
+      "リーダーとして全員を率いる。",
+      "部長が部員を率いて準備した。",
+      "経験者が新人を率いて教えた。",
+      "みんなを率いるのは簡単ではない。",
+      "代表が意見をまとめて率いた。",
+      "仲間を率いて目標に向かった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "存在",
+    "reading": "そんざい",
+    "examples": [
+      "その人の存在が心強い。",
+      "危険な存在に注意する。",
+      "存在を感じて安心した。",
+      "存在を忘れてはいけない。",
+      "空気の存在は目に見えない。",
+      "存在理由を考えた。",
+      "存在が大きくなってきた。",
+      "存在を認め合うことが大切だ。",
+      "その店は町の存在になっている。",
+      "存在が当たり前だと思っていた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "態度",
+    "reading": "たいど",
+    "examples": [
+      "態度がはっきりしている。",
+      "失礼な態度はやめよう。",
+      "態度で気持ちが伝わる。",
+      "真剣な態度で聞いた。",
+      "態度が急に変わった。",
+      "落ち着いた態度で対応した。",
+      "態度があいまいだと誤解される。",
+      "態度に出さないようにした。",
+      "学ぶ態度が大事だ。",
+      "態度を改めると約束した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "鼻",
+    "reading": "はな",
+    "examples": [
+      "鼻がむずむずする。",
+      "鼻をかんでから話した。",
+      "鼻の先が冷たい。",
+      "鼻に水が入って痛かった。",
+      "花の香りが鼻に抜ける。",
+      "鼻をつまんで泳いだ。",
+      "鼻血が出て驚いた。",
+      "鼻で息をする。",
+      "鼻が赤くなっていた。",
+      "鼻の通りがよくなった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "負傷",
+    "reading": "ふしょう",
+    "examples": [
+      "試合中に負傷した。",
+      "軽い負傷で済んだ。",
+      "負傷者が運ばれた。",
+      "負傷の原因を調べた。",
+      "負傷しないように準備運動する。",
+      "負傷が長引いている。",
+      "負傷して休むことになった。",
+      "負傷した友だちを見舞った。",
+      "負傷の手当てを受けた。",
+      "負傷を防ぐ道具を使う。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "立派",
+    "reading": "りっぱ",
+    "examples": [
+      "立派なあいさつができた。",
+      "立派な家が建っている。",
+      "立派に成長したと思う。",
+      "立派な態度で行動した。",
+      "立派な仕事ぶりだった。",
+      "立派な木が公園にある。",
+      "立派だね、とほめられた。",
+      "立派にやりとげたい。",
+      "立派な目標を立てた。",
+      "立派な人になりたい。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "担う",
+    "reading": "になう",
+    "examples": [
+      "大事な役目を担う。",
+      "次の世代を担う子どもたち。",
+      "責任を担う立場になった。",
+      "未来を担う人材を育てる。",
+      "班の中心を担ってくれた。",
+      "重い荷物を担いで歩いた。",
+      "大会の運営を担う。",
+      "家族を担う気持ちになった。",
+      "社会を担う力を学ぶ。",
+      "大役を担って緊張した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "対策",
+    "reading": "たいさく",
+    "examples": [
+      "暑さ対策で水を飲む。",
+      "テスト対策を始めた。",
+      "防災対策を話し合った。",
+      "花粉対策にマスクをした。",
+      "対策が遅れてしまった。",
+      "対策を立てて行動する。",
+      "混雑対策で時間をずらす。",
+      "虫よけ対策をした。",
+      "対策がうまくいった。",
+      "次は別の対策を考える。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "宣伝",
+    "reading": "せんでん",
+    "examples": [
+      "新商品の宣伝が始まった。",
+      "宣伝ポスターを見た。",
+      "店の宣伝を手伝った。",
+      "宣伝のチラシを配った。",
+      "宣伝の効果が出た。",
+      "宣伝がうまくいかない。",
+      "宣伝文を考えた。",
+      "宣伝より中身が大事だ。",
+      "宣伝を見て買ってみた。",
+      "宣伝のしかたを工夫した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "演劇",
+    "reading": "えんげき",
+    "examples": [
+      "演劇部に入った。",
+      "演劇の発表会がある。",
+      "演劇を見て感動した。",
+      "演劇の台本を読んだ。",
+      "演劇の練習を続ける。",
+      "演劇で役をもらった。",
+      "演劇の舞台を作った。",
+      "演劇のせりふを覚える。",
+      "演劇の表現が上手だった。",
+      "演劇を通して学んだ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "尊重",
+    "reading": "そんちょう",
+    "examples": [
+      "相手の意見を尊重する。",
+      "個性を尊重して育てる。",
+      "違いを尊重し合いたい。",
+      "ルールを尊重して行動する。",
+      "尊重されると嬉しい。",
+      "相手の立場を尊重した。",
+      "尊重の気持ちを忘れない。",
+      "尊重しない態度はよくない。",
+      "文化を尊重して学ぶ。",
+      "互いを尊重して話し合う。"
+    ]
+  },
+
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "装置",
+    "reading": "そうち",
+    "examples": [
+      "安全装置が作動した。",
+      "電気の装置を点検する。",
+      "装置のスイッチを切った。",
+      "新しい装置を取り付けた。",
+      "装置の使い方を教わった。",
+      "装置が故障して止まった。",
+      "実験装置を組み立てた。",
+      "装置の音が気になった。",
+      "装置を動かして確かめる。",
+      "装置の説明書を読んだ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "拝む",
+    "reading": "おがむ",
+    "examples": [
+      "神社で手を合わせて拝む。",
+      "朝、仏壇に向かって拝む。",
+      "山の頂上で景色を拝んだ。",
+      "写真を見ながら拝むように願った。",
+      "無事を祈って拝んだ。",
+      "初日の出を拝みに行った。",
+      "合格を願って拝む。",
+      "手を合わせて静かに拝む。",
+      "お参りして拝んだ。",
+      "遠くから寺を拝んだ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "推す",
+    "reading": "おす",
+    "examples": [
+      "箱を後ろから推す。",
+      "ドアを軽く推した。",
+      "車いすをゆっくり推す。",
+      "押すのではなく推して動かす。",
+      "友だちを推して遊ぶのは危ない。",
+      "列を推して前に行かない。",
+      "強く推すと倒れる。",
+      "荷物を推して運んだ。",
+      "机を推して位置を変えた。",
+      "雪を推して道を作った。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "看護",
+    "reading": "かんご",
+    "examples": [
+      "看護師さんに世話をしてもらった。",
+      "看護の仕事に興味がある。",
+      "入院中の看護体制を整える。",
+      "看護の授業で学んだ。",
+      "看護が手厚い病院だ。",
+      "祖母の看護を家族で分担した。",
+      "看護の記録をつける。",
+      "看護の力が必要な場面だ。",
+      "看護の仕事は体力もいる。",
+      "看護について調べた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "導く",
+    "reading": "みちびく",
+    "examples": [
+      "先生が答えへ導く。",
+      "地図が目的地へ導いた。",
+      "正しい判断に導く助言だ。",
+      "光が道を導くように見えた。",
+      "経験が自信へ導いた。",
+      "仲間が成功へ導いてくれた。",
+      "結論を導くために整理する。",
+      "原因を導き出した。",
+      "新しい発見へ導かれた。",
+      "努力が結果へ導く。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "裁く",
+    "reading": "さばく",
+    "examples": [
+      "魚を三枚におろして裁く。",
+      "包丁で肉を裁いた。",
+      "布を型紙に合わせて裁く。",
+      "裁く前に印を付けた。",
+      "野菜を細かく裁いた。",
+      "裁いた布を縫い合わせる。",
+      "裁く作業は集中が必要だ。",
+      "裁き方を動画で学んだ。",
+      "裁いた材料を皿に並べた。",
+      "裁くときは手を切らないようにする。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "確か",
+    "reading": "たしか",
+    "examples": [
+      "確かな手ごたえがあった。",
+      "確かな証拠を集める。",
+      "確かな情報か確認する。",
+      "確かにそう言ったと思う。",
+      "確かな方法で計算した。",
+      "確かな技術を身につける。",
+      "確かに雨が降っていた。",
+      "確かな答えを出したい。",
+      "確かな約束をした。",
+      "確かな記憶ではない。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "復旧",
+    "reading": "ふっきゅう",
+    "examples": [
+      "停電が復旧した。",
+      "道路が復旧して通れた。",
+      "通信が復旧するのを待った。",
+      "復旧作業が急がれた。",
+      "復旧の見通しを聞いた。",
+      "水道が復旧して安心した。",
+      "復旧までに時間がかかった。",
+      "被害の復旧に力を合わせた。",
+      "復旧後に点検をした。",
+      "復旧して普段の生活に戻った。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "難しい",
+    "reading": "むずかしい",
+    "examples": [
+      "この問題は難しい。",
+      "難しい言葉を調べた。",
+      "難しい選択を迫られた。",
+      "難しいけれど挑戦する。",
+      "難しい話を分かりやすくする。",
+      "難しい顔をして考えた。",
+      "難しいところは先生に聞く。",
+      "難しい作業は手順が多い。",
+      "難しい条件でも工夫する。",
+      "難しいと感じたら休む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "降参",
+    "reading": "こうさん",
+    "examples": [
+      "もう降参だ、と笑った。",
+      "暑さに降参した。",
+      "宿題の多さに降参しそうだ。",
+      "降参せず最後までやる。",
+      "負けを認めて降参した。",
+      "難問に降参して答えを見た。",
+      "降参する前にもう一回試す。",
+      "眠気に降参して寝た。",
+      "降参するのはまだ早い。",
+      "ついに降参して手を挙げた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "念頭",
+    "reading": "ねんとう",
+    "examples": [
+      "安全を念頭に置いて行動する。",
+      "相手の気持ちを念頭に話す。",
+      "期限を念頭に作業する。",
+      "目的を念頭において選ぶ。",
+      "結果を念頭に準備した。",
+      "注意点を念頭に確認した。",
+      "将来を念頭に勉強する。",
+      "体調を念頭に無理をしない。",
+      "ルールを念頭に置いた。",
+      "念頭に置いて計画を立てた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "支持",
+    "reading": "しじ",
+    "examples": [
+      "多くの人の支持を集めた。",
+      "支持される理由を考える。",
+      "友だちの意見を支持した。",
+      "支持率が上がったと聞いた。",
+      "支持を得るには実績が必要だ。",
+      "先生の案を支持する。",
+      "支持が分かれて議論になった。",
+      "支持してくれる人がいる。",
+      "支持を失わないようにする。",
+      "周りの支持が心強い。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "得意",
+    "reading": "とくい",
+    "examples": [
+      "算数が得意だ。",
+      "得意なことを伸ばす。",
+      "私は料理が得意ではない。",
+      "得意分野を生かした。",
+      "得意げな顔をした。",
+      "得意な問題から解く。",
+      "得意な人に教わる。",
+      "得意な手順で進める。",
+      "得意なやり方を見つけた。",
+      "得意でも油断しない。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "経験",
+    "reading": "けいけん",
+    "examples": [
+      "よい経験になった。",
+      "経験を積んで上達する。",
+      "初めての経験で緊張した。",
+      "経験から学ぶことが多い。",
+      "経験者に聞いてみた。",
+      "経験が自信につながる。",
+      "経験不足を感じた。",
+      "失敗も経験の一つだ。",
+      "経験を生かして助けた。",
+      "経験を記録しておく。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "損ね",
+    "reading": "そこね",
+    "examples": [
+      "一言で機嫌を損ねた。",
+      "タイミングを損ねて答えられなかった。",
+      "約束を守らず信頼を損ねた。",
+      "礼を欠いて相手を損ねた。",
+      "眠りを損ねるほど不安だった。",
+      "チャンスを損ねてしまった。",
+      "体調を損ねないようにする。",
+      "計画を損ねる出来事が起きた。",
+      "話の流れを損ねないようにした。",
+      "注意しないと調子を損ねる。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "独創",
+    "reading": "どくそう",
+    "examples": [
+      "独創的なアイデアだ。",
+      "独創性のある作品を作った。",
+      "独創を生かした発表だった。",
+      "独創に富んだ計画を立てた。",
+      "独創的な工夫が光る。",
+      "独創にこだわりすぎない。",
+      "独創を評価してもらった。",
+      "独創的な表現を試した。",
+      "独創の視点で考える。",
+      "独創を大切にしたい。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "達成",
+    "reading": "たっせい",
+    "examples": [
+      "目標を達成した。",
+      "達成感があった。",
+      "期限までに達成する。",
+      "達成するために計画を立てた。",
+      "小さな目標から達成する。",
+      "達成できず悔しかった。",
+      "達成率を上げたい。",
+      "達成に向けて努力する。",
+      "達成を祝って拍手した。",
+      "達成のために協力した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "燃える",
+    "reading": "もえる",
+    "examples": [
+      "木がよく燃える。",
+      "炎が勢いよく燃えた。",
+      "燃えるごみの日に出す。",
+      "紙は簡単に燃える。",
+      "夕焼けが空を燃えるように染めた。",
+      "心が燃えるように熱くなった。",
+      "燃えるにおいがした。",
+      "火が燃える音が聞こえた。",
+      "燃えないように水をかけた。",
+      "燃える気持ちで挑む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "機能",
+    "reading": "きのう",
+    "examples": [
+      "このボタンは便利な機能がある。",
+      "機能が多くて使いこなせない。",
+      "安全機能が付いている。",
+      "新しい機能を追加した。",
+      "機能が停止してしまった。",
+      "機能を確認してから使う。",
+      "冷暖房の機能を切り替える。",
+      "機能が十分に働いた。",
+      "機能を改善する必要がある。",
+      "この機能はよく使う。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 6,
+    "word": "群れ",
+    "reading": "むれ",
+    "examples": [
+      "鳥の群れが空を飛んだ。",
+      "魚の群れが泳いでいる。",
+      "犬が群れになって走った。",
+      "群れから離れないようにする。",
+      "群れを作って身を守る。",
+      "群れの中で順番に鳴く。",
+      "群れを見つけて写真を撮った。",
+      "群れが一斉に動いた。",
+      "群れの先頭についていく。",
+      "群れが近づいてきた。"
     ]
   },
   {
