--- a/index.html
+++ b/index.html
@@ -416,16 +416,16 @@
     "word": "垂れる",
     "reading": "たれる",
     "examples": [
-      "汗が額から垂れる。",
-      "洗濯物が竿から垂れた。",
-      "糸がだらりと垂れている。",
-      "雨どいから水が垂れ落ちた。",
-      "よだれが少し垂れてしまう。",
-      "ペンキが床に垂れないようにした。",
-      "枝が重みで垂れ下がっている。",
-      "カーテンのひもが垂れていた。",
-      "水が指先から垂れていく。",
-      "涙が頬を伝って垂れた。"
+      "木の枝から露が垂れる。",
+      "前髪が目に少し垂れた。",
+      "汗があごから垂れてきた。",
+      "カーテンがまっすぐ垂れる。",
+      "鼻水がつい垂れてしまう。",
+      "電線がたるんで垂れて見える。",
+      "雨どいから水が垂れる音がした。",
+      "ソースが皿のふちに垂れた。",
+      "よだれが口元から垂れそうだ。",
+      "ペン先からインクが垂れた。"
     ]
   },
   {
@@ -435,16 +435,16 @@
     "word": "専門",
     "reading": "せんもん",
     "examples": [
+      "兄は理科が専門だ。",
       "専門の先生に相談した。",
+      "専門用語はむずかしい。",
+      "専門書は図書館で借りた。",
+      "専門店で道具を選ぶ。",
       "専門家の意見を聞いた。",
-      "専門分野が違うと難しい。",
-      "専門用語をかみくだいて説明する。",
-      "専門書を一冊読んでみた。",
-      "専門店で道具を買った。",
-      "専門の知識が必要な作業だ。",
-      "専門チームが調査を進める。",
-      "専門外のことは無理をしない。",
-      "将来は専門を生かしたい。"
+      "専門分野を一つ決める。",
+      "ここは魚の専門店だ。",
+      "専門の受付に案内された。",
+      "専門的な話は後にしよう。"
     ]
   },
   {
@@ -454,16 +454,16 @@
     "word": "意外",
     "reading": "いがい",
     "examples": [
-      "意外と早く終わった。",
+      "意外と道は空いていた。",
+      "意外な答えが返ってきた。",
+      "意外にこの歌が好きだ。",
+      "彼は意外と早起きだ。",
       "意外なところで会った。",
-      "結果は意外に接戦だった。",
-      "意外にも雨が降らなかった。",
-      "意外な一言に驚いた。",
-      "意外と相性がよかった。",
-      "意外な弱点が見つかった。",
-      "意外と道が混んでいた。",
-      "意外に落ち着いて話せた。",
-      "意外と簡単に解けた。"
+      "意外と雨はすぐ止んだ。",
+      "意外にも妹が冷静だった。",
+      "意外なミスに気づいた。",
+      "意外と簡単に解けた。",
+      "意外に値段が高かった。"
     ]
   },
   {
@@ -473,16 +473,16 @@
     "word": "済む",
     "reading": "すむ",
     "examples": [
+      "準備はもう済んだ。",
       "宿題が早く済んだ。",
-      "準備はこれで済む。",
-      "支払いは電子で済ませた。",
-      "一言で済む話ではない。",
-      "手続きが無事に済んだ。",
-      "謝ればそれで済むと思うな。",
-      "昼までに用事を済ませる。",
-      "説明を聞いて納得が済んだ。",
-      "簡単に済ませず確認した。",
-      "修理が済んだら連絡する。"
+      "説明だけで済ませない。",
+      "これで話が済むなら助かる。",
+      "会計はカードで済んだ。",
+      "謝って済む問題ではない。",
+      "買い物は近所で済ませた。",
+      "一言で済むことじゃない。",
+      "用事が済んだら連絡する。",
+      "点検が済んでから出発した。"
     ]
   },
   {
@@ -492,16 +492,16 @@
     "word": "簡単",
     "reading": "かんたん",
     "examples": [
-      "簡単な計算を間違えた。",
+      "作り方は簡単だ。",
+      "簡単な問題から解く。",
+      "説明を簡単にまとめた。",
+      "この道は意外に簡単だ。",
       "簡単にあきらめない。",
-      "説明は簡単で分かりやすい。",
+      "操作は簡単に覚えた。",
+      "簡単な言葉で言い直す。",
       "簡単そうに見えて難しい。",
-      "手順を簡単にまとめた。",
-      "簡単な道具で作れる。",
-      "簡単に答えが出ない問題だ。",
-      "簡単に片づけて出発した。",
-      "思ったより簡単だった。",
-      "簡単なミスが多かった。"
+      "簡単な計算で確かめた。",
+      "簡単な朝ごはんにした。"
     ]
   },
   {
@@ -511,16 +511,16 @@
     "word": "備え",
     "reading": "そなえ",
     "examples": [
-      "地震に備えて水を買った。",
-      "寒さに備えて上着を持つ。",
-      "非常時の備えを点検した。",
-      "雨に備えて傘を用意した。",
-      "備えがあると落ち着く。",
-      "備えが足りず困った。",
-      "予備の電池を備えた。",
-      "備えとして連絡先を書いた。",
-      "備えが万全か確認する。",
-      "備えをしても油断は禁物だ。"
+      "地震への備えをする。",
+      "非常食の備えがある。",
+      "雨に備えて傘を持つ。",
+      "備えがあれば安心だ。",
+      "防災の備えを見直した。",
+      "備えとして水を買った。",
+      "冬に備え服を出した。",
+      "備えあればうれいなし。",
+      "停電の備えで電池を用意。",
+      "家族で備えを話し合う。"
     ]
   },
   {
@@ -530,16 +530,16 @@
     "word": "預かる",
     "reading": "あずかる",
     "examples": [
-      "先生から鍵を預かった。",
-      "荷物を受付で預かる。",
-      "一日だけ犬を預かった。",
-      "友だちの傘を預かった。",
-      "大切な書類を預かっている。",
-      "帽子を預かる場所がある。",
-      "預かったものは返す約束だ。",
-      "しばらく私が預かっておく。",
-      "預かるだけで責任が重い。",
-      "忘れないように預かった。"
+      "先生が鍵を預かる。",
+      "荷物を少し預かって。",
+      "弟を夕方まで預かった。",
+      "書類を私が預かります。",
+      "友だちの自転車を預かる。",
+      "忘れ物を受付で預かった。",
+      "財布は親に預かってもらう。",
+      "荷物を預かる場所がある。",
+      "大事な話を預かっておく。",
+      "伝言を預かっておいたよ。"
     ]
   },
   {
@@ -549,16 +549,16 @@
     "word": "不思議",
     "reading": "ふしぎ",
     "examples": [
-      "不思議な音が聞こえた。",
-      "不思議と緊張が消えた。",
-      "不思議な形の雲が出た。",
-      "不思議そうに首をかしげた。",
-      "不思議な偶然が重なった。",
-      "不思議で仕方がない。",
-      "不思議な話を思い出した。",
-      "不思議なにおいがした。",
-      "不思議な力を信じない。",
-      "不思議と眠くならない。"
+      "不思議な音がした。",
+      "不思議と落ち着いた。",
+      "不思議な夢を見た。",
+      "不思議に雨が止んだ。",
+      "不思議な形の雲だ。",
+      "不思議と眠くならない。",
+      "不思議な話を聞いた。",
+      "不思議に道に迷わない。",
+      "不思議な手品を見た。",
+      "不思議と元気が出た。"
     ]
   },
   {
@@ -568,16 +568,16 @@
     "word": "捨てる",
     "reading": "すてる",
     "examples": [
-      "ごみを捨てる日を確認した。",
-      "いらない紙は捨てた。",
-      "使い切ってから捨てる。",
-      "迷いを捨てて決めた。",
-      "約束を捨てるわけにはいかない。",
-      "古い服を捨てることにした。",
-      "感情を捨てて話し合う。",
-      "あきらめを捨てて挑戦した。",
-      "拾ったごみを捨てに行く。",
-      "袋をしっかり結んで捨てる。"
+      "古い紙を捨てる。",
+      "ごみは分けて捨てる。",
+      "あきらめを捨てない。",
+      "いらない服を捨てた。",
+      "悪いくせを捨てたい。",
+      "迷いを捨てて決める。",
+      "チャンスを捨てるな。",
+      "見栄を捨てて相談した。",
+      "角を捨てて丸くなる。",
+      "古い考えを捨てた。"
     ]
   },
   {
@@ -587,16 +587,16 @@
     "word": "発揮",
     "reading": "はっき",
     "examples": [
-      "力を発揮して勝った。",
-      "集中力が発揮できた。",
-      "実力を発揮する場だ。",
-      "練習の成果を発揮した。",
-      "持ち味を発揮して助けた。",
-      "チームワークが発揮された。",
-      "個性を発揮できる仕事だ。",
-      "発揮できず悔しかった。",
-      "本番で発揮するため備える。",
-      "最後に底力を発揮した。"
+      "力を発揮する場面だ。",
+      "本番で実力を発揮した。",
+      "集中力を発揮できた。",
+      "勇気を発揮して言った。",
+      "チームで力を発揮した。",
+      "特技を発揮する機会だ。",
+      "才能を発揮するには練習。",
+      "工夫を発揮して作った。",
+      "粘り強さを発揮した。",
+      "思いやりを発揮して助けた。"
     ]
   },
   {
@@ -607,15 +607,15 @@
     "reading": "かんしん",
     "examples": [
       "環境問題に関心がある。",
-      "関心を持って記事を読んだ。",
-      "関心のある分野を調べた。",
-      "関心が薄いと覚えにくい。",
-      "関心を引く見出しだった。",
-      "関心が高まってきた。",
-      "人の関心はすぐ移る。",
-      "関心を向ける先を変えた。",
+      "関心のある本を選ぶ。",
+      "政治に関心を持ち始めた。",
+      "関心が向く話題だ。",
       "関心がないふりをした。",
-      "関心を共有すると話が進む。"
+      "関心を引く見出しだ。",
+      "関心を持って聞いた。",
+      "関心の中心が変わった。",
+      "関心が高いテーマだ。",
+      "関心を広げたい。"
     ]
   },
   {
@@ -625,16 +625,548 @@
     "word": "拾う",
     "reading": "ひろう",
     "examples": [
-      "道で小銭を拾った。",
-      "落とした消しゴムを拾う。",
+      "道で小石を拾う。",
+      "落とし物を拾った。",
       "ごみを拾って帰った。",
-      "拾った物は届け出た。",
-      "砂浜で貝がらを拾った。",
-      "拾う前に周りを見た。",
-      "拾ってくれて助かった。",
-      "拾うのが間に合わなかった。",
-      "拾った紙を袋に入れた。",
-      "拾うより落とさない工夫だ。"
+      "貝がらを拾って集めた。",
+      "いい案を拾ってメモした。",
+      "相手の言葉を拾って返す。",
+      "枝を拾ってたき火に使う。",
+      "財布を拾い交番へ行った。",
+      "ボールを拾って渡した。",
+      "落ち葉を拾い袋に入れた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "承知",
+    "reading": "しょうち",
+    "examples": [
+      "予定は承知しました。",
+      "事情は承知している。",
+      "承知の上で引き受けた。",
+      "承知しました、すぐ行きます。",
+      "それは承知できない。",
+      "承知しておいてください。",
+      "承知のとおり雨天中止だ。",
+      "承知して協力した。",
+      "先生に承知を得た。",
+      "内容を承知した上で署名。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "浴びる",
+    "reading": "あびる",
+    "examples": [
+      "朝日を浴びて歩いた。",
+      "雨を浴びてびしょぬれだ。",
+      "強い光を浴びて目を細めた。",
+      "水しぶきを浴びて笑った。",
+      "風を浴びて涼しい。",
+      "注目を浴びる選手だ。",
+      "批判を浴びて反省した。",
+      "拍手を浴びて退場した。",
+      "歓声を浴びて緊張した。",
+      "シャワーを浴びてさっぱり。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "印象",
+    "reading": "いんしょう",
+    "examples": [
+      "第一印象が大事だ。",
+      "強い印象が残った。",
+      "明るい印象の教室だ。",
+      "声が優しい印象だった。",
+      "印象が少し変わった。",
+      "短い言葉でも印象は深い。",
+      "色で印象が左右される。",
+      "写真は印象的に写った。",
+      "印象をよくする服装だ。",
+      "その一言が印象に残る。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "慣れる",
+    "reading": "なれる",
+    "examples": [
+      "新しいクラスに慣れる。",
+      "早起きに少し慣れた。",
+      "人前で話すのに慣れた。",
+      "この靴はすぐ慣れる。",
+      "寒さに慣れてきた。",
+      "道に慣れて迷わない。",
+      "失敗にも慣れたくない。",
+      "作業の流れに慣れる。",
+      "緊張は回数で慣れる。",
+      "環境に慣れるまで時間がいる。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "複雑",
+    "reading": "ふくざつ",
+    "examples": [
+      "道が複雑で迷った。",
+      "事情が複雑らしい。",
+      "複雑な気持ちになった。",
+      "機械の中は複雑だ。",
+      "複雑な形をしている。",
+      "説明が複雑で分かりにくい。",
+      "手順が複雑なのでメモした。",
+      "問題が複雑に見える。",
+      "複雑な関係がある。",
+      "地図は複雑でも落ち着く。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "興奮",
+    "reading": "こうふん",
+    "examples": [
+      "試合に興奮して眠れない。",
+      "興奮をおさえて深呼吸した。",
+      "友だちは興奮気味だった。",
+      "興奮すると声が大きくなる。",
+      "興奮して話が止まらない。",
+      "興奮のあまり手が震えた。",
+      "興奮を伝える文章を書いた。",
+      "興奮して走り出した。",
+      "興奮が落ち着いてきた。",
+      "興奮する場面が多かった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "容易",
+    "reading": "ようい",
+    "examples": [
+      "成功は容易ではない。",
+      "容易にあきらめない。",
+      "容易に想像できる話だ。",
+      "この作業は容易だと思った。",
+      "容易に答えが出ない。",
+      "容易に真似できない技だ。",
+      "容易に手に入る品ではない。",
+      "容易に信じてはいけない。",
+      "容易に近づけない場所だ。",
+      "容易に見えるが注意がいる。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "映る",
+    "reading": "うつる",
+    "examples": [
+      "水面に山が映る。",
+      "鏡に顔が映った。",
+      "写真に指が映っていた。",
+      "窓に街の明かりが映る。",
+      "影が壁に映って動いた。",
+      "テレビに自分が映って驚く。",
+      "心配が顔に映る。",
+      "光が目に映ってまぶしい。",
+      "レンズに景色が映る。",
+      "夕日が雲に赤く映った。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "貸す",
+    "reading": "かす",
+    "examples": [
+      "消しゴムを貸して。",
+      "本を一週間貸す。",
+      "傘を友だちに貸した。",
+      "部屋を会議に貸す。",
+      "貸す前に名前を書く。",
+      "道具は大事に貸す。",
+      "お金は簡単に貸さない。",
+      "自転車を貸してもらった。",
+      "貸す代わりに約束した。",
+      "困っていたので貸した。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "届く",
+    "reading": "とどく",
+    "examples": [
+      "荷物が朝に届いた。",
+      "声が後ろまで届く。",
+      "思いが相手に届いた。",
+      "手が棚に届かない。",
+      "通知がスマホに届く。",
+      "願いが空に届くといい。",
+      "電波が届きにくい場所だ。",
+      "手紙が無事に届いた。",
+      "光が部屋の奥まで届く。",
+      "あと少しでゴールに届く。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "想像",
+    "reading": "そうぞう",
+    "examples": [
+      "未来を想像して書いた。",
+      "想像より寒かった。",
+      "想像するとわくわくする。",
+      "想像がふくらむ物語だ。",
+      "相手の気持ちを想像する。",
+      "想像もできない速さだ。",
+      "想像力を使って絵を描く。",
+      "想像どおりの結果だった。",
+      "想像と違って静かだった。",
+      "想像して準備をした。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "暮らし",
+    "reading": "くらし",
+    "examples": [
+      "昔の暮らしを調べた。",
+      "暮らしやすい町を選ぶ。",
+      "暮らしのリズムを整える。",
+      "暮らしの中で節電する。",
+      "暮らしに役立つ知恵だ。",
+      "暮らしの変化に気づいた。",
+      "安全な暮らしを守る。",
+      "暮らしの道具を大切にする。",
+      "暮らしが少し楽になった。",
+      "家族の暮らしを支える。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "誕生",
+    "reading": "たんじょう",
+    "examples": [
+      "新しい店が誕生した。",
+      "弟の誕生を祝った。",
+      "この町は川から誕生した。",
+      "新記録の誕生だ。",
+      "アイデアが誕生した瞬間。",
+      "星の誕生を学んだ。",
+      "新製品が誕生した。",
+      "言葉の誕生には歴史がある。",
+      "友情が誕生した日だ。",
+      "春に花が誕生するようだ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "対照",
+    "reading": "たいしょう",
+    "examples": [
+      "二人は性格が対照的だ。",
+      "明と暗の対照が強い。",
+      "夏と冬は対照的だ。",
+      "赤と青の対照が目立つ。",
+      "対照的な意見が出た。",
+      "静かな町と対照の都会。",
+      "対照がはっきりする写真だ。",
+      "兄弟でも対照的に育った。",
+      "表情が対照的だった。",
+      "対照を比べてまとめた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "染める",
+    "reading": "そめる",
+    "examples": [
+      "布を青に染める。",
+      "髪を明るく染めた。",
+      "夕日が空を赤く染める。",
+      "手がインクで染まった。",
+      "花で布を染めてみた。",
+      "心を色で染める言葉。",
+      "町が雪で白く染まる。",
+      "指先を絵の具で染めた。",
+      "紙を茶色に染めた。",
+      "水が土で濁って染まる。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "険しく",
+    "reading": "けわしく",
+    "examples": [
+      "道はだんだん険しくなる。",
+      "険しく見える山に登った。",
+      "表情が険しくなった。",
+      "風が険しく吹きつける。",
+      "坂が険しくて息が切れた。",
+      "険しく注意されて反省した。",
+      "川の流れが険しくなる。",
+      "険しくなる前に引き返す。",
+      "声が険しく聞こえた。",
+      "険しくても前へ進む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "見当",
+    "reading": "けんとう",
+    "examples": [
+      "答えの見当がつかない。",
+      "場所の見当がついた。",
+      "犯人の見当がついたらしい。",
+      "だいたいの見当で選ぶ。",
+      "値段の見当をつけた。",
+      "見当違いの質問だった。",
+      "出口の見当がつかず迷う。",
+      "見当をつけて地図を見る。",
+      "時間の見当を教えて。",
+      "見当がついたので向かった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "口調",
+    "reading": "くちょう",
+    "examples": [
+      "やさしい口調で話す。",
+      "急な口調に驚いた。",
+      "口調が少し強かった。",
+      "丁寧な口調を心がける。",
+      "冗談めいた口調だった。",
+      "落ち着いた口調で説明した。",
+      "口調から本気だと分かった。",
+      "口調をまねして遊んだ。",
+      "口調がやわらいだ。",
+      "同じ口調で返さない。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "耕す",
+    "reading": "たがやす",
+    "examples": [
+      "畑を耕して種をまく。",
+      "土を深く耕した。",
+      "春に畑を耕す仕事。",
+      "家族で畑を耕した。",
+      "道具で土を耕す。",
+      "耕して空気を入れる。",
+      "雨の前に耕しておく。",
+      "畑を耕す音が聞こえた。",
+      "小さな庭を耕してみた。",
+      "耕してから苗を植えた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "故障",
+    "reading": "こしょう",
+    "examples": [
+      "自転車が故障した。",
+      "機械の故障を直した。",
+      "突然の故障で止まった。",
+      "故障の原因を調べる。",
+      "故障しないよう点検する。",
+      "パソコンが故障して困る。",
+      "故障中の札が出ていた。",
+      "古い時計が故障した。",
+      "故障が多い機種らしい。",
+      "故障を早めに知らせた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "反らす",
+    "reading": "そらす",
+    "examples": [
+      "顔を少し反らした。",
+      "視線を反らしてごまかす。",
+      "弓を引いて胸を反らす。",
+      "首を反らすと痛い。",
+      "光がまぶしくて目を反らした。",
+      "体を反らしてストレッチ。",
+      "話題を反らして逃げた。",
+      "背中を反らして深呼吸した。",
+      "水しぶきに顔を反らす。",
+      "相手から目を反らした。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "展覧",
+    "reading": "てんらん",
+    "examples": [
+      "展覧会へ家族で行った。",
+      "展覧会の案内を見た。",
+      "展覧会で絵をじっくり見た。",
+      "展覧会のチケットを買う。",
+      "展覧会の入口で並んだ。",
+      "展覧会の感想をメモした。",
+      "展覧会は来週までだ。",
+      "展覧会に作品を出す。",
+      "展覧会の図録を買った。",
+      "展覧会で写真は禁止だった。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "絶対",
+    "reading": "ぜったい",
+    "examples": [
+      "絶対に忘れない。",
+      "絶対だいじょうぶと言った。",
+      "絶対に遅れないようにする。",
+      "これは絶対に必要だ。",
+      "絶対にうそはつかない。",
+      "絶対の自信がある。",
+      "絶対に勝ちたい試合。",
+      "絶対に無理だと決めつけない。",
+      "絶対条件を確認した。",
+      "絶対に守る約束だ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "典型",
+    "reading": "てんけい",
+    "examples": [
+      "それは典型的な例だ。",
+      "典型的な間違いだ。",
+      "典型を知ると分かりやすい。",
+      "典型として教科書に出る。",
+      "典型的な天気になった。",
+      "典型的な形を覚えた。",
+      "典型を比べて理解した。",
+      "典型的な反応だった。",
+      "典型的な一日だ。",
+      "典型のパターンをまとめた。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "築く",
+    "reading": "きずく",
+    "examples": [
+      "信頼関係を築く。",
+      "努力で実力を築いた。",
+      "友情を少しずつ築く。",
+      "土台を築いて家を建てる。",
+      "経験を積んで自信を築く。",
+      "平和を築くため話し合う。",
+      "伝統を築いてきた町だ。",
+      "毎日の練習で力を築く。",
+      "新しいルールを築いた。",
+      "自分の道を築きたい。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "対象",
+    "reading": "たいしょう",
+    "examples": [
+      "対象は小学生です。",
+      "対象者に連絡した。",
+      "この割引の対象外だ。",
+      "研究の対象を決めた。",
+      "対象地域を地図で確認。",
+      "対象年齢を見て買う。",
+      "対象を広げて調べる。",
+      "注意の対象になった。",
+      "支援の対象が増えた。",
+      "対象をしぼって選ぶ。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "営む",
+    "reading": "いとなむ",
+    "examples": [
+      "家族で店を営む。",
+      "農業を営んでいる。",
+      "静かな暮らしを営む。",
+      "仕事を営み町を支える。",
+      "会社を営むのは大変だ。",
+      "旅館を営む人に会った。",
+      "小さな工場を営んでいる。",
+      "漁を営む村の話。",
+      "商売を営む工夫がある。",
+      "日々の生活を営む。"
+    ]
+  },
+  {
+    "grade": 6,
+    "term": "上",
+    "round": 1,
+    "word": "痛い",
+    "reading": "いたい",
+    "examples": [
+      "ひざが少し痛い。",
+      "頭が痛いので休む。",
+      "転んで手が痛かった。",
+      "のどが痛い気がする。",
+      "痛いところをつかれた。",
+      "注射は少し痛い。",
+      "痛い思いをして学んだ。",
+      "肩が痛くて上がらない。",
+      "痛いと言って泣いた。",
+      "心が痛い話を聞いた。"
     ]
   },
   {
