--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>四谷大塚「漢字とことば」<br>演習プリント生成ツール</h1>
+        <h1>「漢字とことば」<br>演習プリント生成ツール</h1>
 
         <div class="form-group">
             <label>学年</label>
