--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div id="resultArea">
             <h2 style="margin-bottom: 15px;">生成された問題（編集可能）</h2>
             <textarea id="editArea"></textarea>
-            <p style="font-size: 14px; color: #666; margin-top: 8px;">※この例文は生成AIによって作成されたものです。※この例文は生成AIによって作成されたものです。<br>本サービスは四谷大塚を含む特定の塾・出版社とは関係ありません。<br>掲載されている問題・例文はすべてオリジナルで作成されています。</p>
+            <p style="font-size: 14px; color: #666; margin-top: 8px;">※この例文は生成AIによって作成されたものです。<br>　本サービスは四谷大塚を含む特定の塾・出版社とは関係ありません。<br>　掲載されている問題・例文はすべてオリジナルで作成されています。表示されている区分は、本ツール独自の学習単位です。</p>
             <div class="button-group">
                 <button class="print-preview-btn" onclick="showPrintPreview()">印刷プレビュー</button>
             </div>
